--- a/report/bibliography.tex
+++ b/report/bibliography.tex
@@ -5,50 +5,61 @@
 \bibliographystyle{unsrtnat}
 
 \begin{thebibliography}{99}
-	\bibitem{alien-plants}
-	https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7194640/
-	\bibitem{invasive-plants}
-	https://www.sciencedaily.com/releases/2022/02/220210125820.htm
-	\bibitem{heracleum} https://cyberleninka.ru/article/n/borschevik-sosnovskogo-v-rossiyskoy-federatsii/viewer
-	\weblink*{rivr}{https://ib.komisc.ru/add/rivr}{Официальный сайт проекта РИВР}{26.12.2021}
-	\weblink*{esquire}{https://esquire.ru/articles/5849-cow-parsnip}{Статья в журнале Esquire, посвященная борщевику Cосновского}{12.01.2022}
-	
-	\weblink*{inaturalist}{https://www.inaturalist.org}{Официальный сайт проекта iNaturalist}{26.12.2021}
-	\weblink*{googlemymaps}{https://www.google.com/maps/about/mymaps}{Страница с описанием сервиса Google MyMaps}{26.12.2021}
-	\weblink*{plantfinder}{https://www.plantsmap.com/finder/plants}{Страница с описанием сервиса Plant Finder}{26.12.2021}
-	\weblink*{floraincognita}{https://floraincognita.com}{Официальный сайт сервиса Flora Incognita}{11.01.2022}
-	\weblink*{inaturalist-export}{https://www.inaturalist.org}{Официальный сайт проекта iNaturalist}{26.12.2021}
-	
-	
-	
-	\bibitem{privacy-policy} Федеральный закон от 27.07.2006 N 152-ФЗ (ред. от 02.07.2021) "О персональных данных", статья 9.1
-	
-	
-	
+	\bibitem{alien-plants} Kumar Rai P, Singh JS. Invasive alien plant species: Their impact on environment, ecosystem services and human health. Ecol Indic. 2020;111:106020. doi:10.1016/j.ecolind.2019.106020
+	\bibitem{invasive-plants} University of Florida. (2022, February 10). How climate change can worsen impact of invasive plants. ScienceDaily. Retrieved May 31, 2022 from \url{www.sciencedaily.com/releases/2022/02/220210125820.htm}
+	\bibitem{heracleum} Лунева Н.Н. (2014). Борщевик Сосновского в Российской Федерации. Защита и карантин растений, (3), 12-18.
+	\webbibitem*{rivr}{https://ib.komisc.ru/add/rivr}{Официальный сайт проекта РИВР}{26.12.2021}
+	\webbibitem{esquire}{https://esquire.ru/articles/5849-cow-parsnip}{Статья, посвящённая борщевику Cосновского}{Журнал \textquote{Правила жизни}. 08.06.2020}{12.01.2022}
+	\webbibitem{article}{https://etu.ru/assets/files/Faculty-FKTI/MO/sbornik-2022-moevm.pdf}{Сергеев А.Д. Разработка архитектуры системы наблюдения за потенциально опасными для человека растениями}{Сборник докладов студентов и аспирантов на научно-техническом семинаре кафедры МО ЭВМ. 2022}{23.05.2022}
+
+
+
+	\webbibitem*{inaturalist}{https://www.inaturalist.org}{Официальный сайт проекта iNaturalist}{26.12.2021}
+	\webbibitem*{googlemymaps}{https://www.google.com/maps/about/mymaps}{Страница с описанием сервиса Google MyMaps}{26.12.2021}
+	\webbibitem*{plantfinder}{https://www.plantsmap.com/finder/plants}{Страница с описанием сервиса Plant Finder}{26.12.2021}
+	\webbibitem*{floraincognita}{https://floraincognita.com}{Официальный сайт сервиса Flora Incognita}{11.01.2022}
+	\webbibitem*{inaturalist-export}{https://www.inaturalist.org/observations/export}{Страница выгрузки данных из сервиса iNaturalist. Доступна после регистрации.}{26.12.2021}
+
+
+
+	\bibitem{privacy-policy} Федеральный закон от 27.07.2006 N 152-ФЗ (ред. от 02.07.2021) \textquote{О персональных данных}, статья 9.1
+
+
+
 	\bibitem{postgis-vs-mongo} Bartoszewski, Dominik \& Piórkowski, Adam \& Lupa, Michał. (2019). The Comparison of Processing Efficiency of Spatial Data for PostGIS and MongoDB Databases. 10.1007/978-3-030-19093-4\_22.
-	\weblink*{flutter-vs-react}{https://dergipark.org.tr/en/download/article-file/1607441}{Сравнение
-	популярных фреймворков для кроссплатформенной разработки}{18.05.2022}
-	\weblink*{flutter-better}{http://www.diva-portal.org/smash/get/diva2:1442804/FULLTEXT01.pdf}{Оценка производительности популярных фреймворков для кроссплатформенной разработки}{18.05.2022}
-	\weblink*{bloc-better}{https://flutterdevs.com/blog/bloc-pattern-in-flutter-part-1}{Описание архитектуры BLoC}{18.05.2022}
+
+	\webbibitem{rest-better}{https://www.ics.uci.edu/~fielding/pubs/dissertation/rest\_arch\_style.htm}{Fielding, Roy Thomas. Architectural Styles and the Design of Network-based Software Architectures. Doctoral dissertation, University of California, Irvine, 2000.}{Donald Bren School of Information and Computer Sciences. 2000}{31.05.2022}
+
+	\bibitem{flutter-vs-react} Gülcüoğlu, E. , Ustun, A. B. \& Seyhan, N. (2021). Comparison of Flutter and React Native Platforms . Journal of Internet Applications and Management , 12 (2) , 129-143 . DOI: 10.34231/iuyd.888243
+	\bibitem{flutter-better} Olsson, M. (2020). A Comparison of Performance and Looks Between Flutter and Native Applications: When to prefer Flutter over native in mobile application development (Dissertation). Retrieved from \url{http://urn.kb.se/resolve?urn=urn:nbn:se:bth-19712}
+	\webbibitem*{bloc-better}{https://flutterdevs.com/blog/bloc-pattern-in-flutter-part-1}{Описание архитектуры BLoC}{18.05.2022}
+
 	\bibitem{convolutional-better} Shamsaldin, Ahmed \& Fattah, Polla \& Rashid, Tarik \& Al-Salihi, Nawzad. (2019). The Study of The Convolutional Neural Networks Applications. UKH Journal of Science and Engineering. 3. 31-40. 10.25079/ukhjse.v3n2y2019.pp31-40.
-	\bibitem{tensorflow-better} Kiran, T. Tritva Jyothi, Computer Vision Accuracy Analysis with Deep Learning Model Using TensorFlow (JULY 22, 2020). International Journal of Innovative Research in Computer Science \& Technology (IJIRCST) ISSN: 2347-5552, Volume, 8, Issue, 4, July, 2020, Available at SSRN: \href{https://ssrn.com/abstract=3673214}{https://ssrn.com/abstract=3673214} or \href{http://dx.doi.org/10.2139/ssrn.3673214}{http://dx.doi.org/10.2139/ssrn.3673214} 
-	\weblink*{mobilenet-better}{https://arxiv.org/abs/1801.04381}{Описание модели MobileNetV2 свёрточной нейронной сети, обученной на наборе данных ImageNet}{29.05.2022}
-	
-	
-	
-	\weblink*{un-biodiv}{https://www.cbd.int/convention/text/}{United Nations Convention on Biological Diversity (CBD)}{17.05.2022}
-	\bibitem{poisonous-ivy}
-	nytimes.com/interactive/projects/cp/climate/2015-paris-climate-talks/what-climate-change-looks-like-poison-ivy
+	\bibitem{tensorflow-better} Kiran, T. Tritva Jyothi, Computer Vision Accuracy Analysis with Deep Learning Model Using TensorFlow (JULY 22, 2020). International Journal of Innovative Research in Computer Science \& Technology (IJIRCST) ISSN: 2347-5552, Volume, 8, Issue, 4, July, 2020, Available at SSRN: \url{https://ssrn.com/abstract=3673214} or \url{http://dx.doi.org/10.2139/ssrn.3673214} 
+	\bibitem{mobilenet-better} Sandler, M., Howard, A., Zhu, M., Zhmoginov, A., \& Chen, L.-C. (2018). MobileNetV2: Inverted Residuals and Linear Bottlenecks. ArXiv. \url{https://doi.org/10.48550/ARXIV.1801.04381}
+	\webbibitem*{openimage-better}{https://storage.googleapis.com/openimages/web/download.html}{Официальная страница набора данных OpenImage}{31.05.2022}
+
+	\webbibitem*{container-register}{http://ghcr.io}{Официальная страница регистра контейнеров GitHub}{31.05.2022}
+	\webbibitem*{project-repo}{https://github.com/pseusys/HogWeedGo}{Репозиторий проекта}{31.05.2022}
+	\webbibitem*{published-version}{https://pseusys.github.io/HogWeedGo/}{Опубликованный прототип клиентского web приложения системы}{31.05.2022}
+
+
+
+	\webbibitem*{un-biodiv}{https://www.cbd.int/convention/text/}{United Nations Convention on Biological Diversity (CBD)}{17.05.2022}
+	\webbibitem{poisonous-ivy}{nytimes.com/interactive/projects/cp/climate/2015-paris-climate-talks/what-climate-change-looks-like-poison-ivy}{Nicholas St. Fleur What Climate Change Feels Like: A More Toxic Poison Ivy}{The New York Times. 2015}{31.05.2022}
 	\bibitem{heracleum-desc} Виноградова В.М. Борщевик — Heracleum L. // Флора Восточной Европы. — М.; СПб.: Товарищество научных изданий КМК, 2004, Т. 11. – С. 404.
-	\bibitem{kommersant} https://www.kommersant.ru/doc/2781947
-	\bibitem{er-initiative} https://er.ru/activity/news/zachem-neobhodima-federalnaya-programma-po-borbe-s-borshevikom-razyasnyaet-vladimir-burmatov
-	\bibitem{mos-expenses} https://www.agroinvestor.ru/business-pages/34172-sovremennye-metodiki-sposobny-sokratit-raskhody-na-borbu-s-borshchevikom-v-neskolko-raz/
-	\bibitem{len-expenses} https://www.lenoblzaks.ru/publics/single/115/63977
-	\bibitem{rural-measures} https://fsvps.gov.ru/ru/fsvps/news/36717.html
-	\bibitem{countryside-measures} "Земельный кодекс Российской Федерации" от 25.10.2001 N 136-ФЗ, статья 42 (ред. от 01.05.2022)
-	\bibitem{rural-fine} "Кодекс Российской Федерации об административных правонарушениях" от 30.12.2001 N 195-ФЗ (ред. от 16.04.2022) (с изм. и доп., вступ. в силу с 27.04.2022), статья 8.7
-	\bibitem{rural-law} Федеральный закон "Об обороте земель сельскохозяйственного назначения" от 24.07.2002 N 101-ФЗ
-	\bibitem{nature-law} Распоряжение Минприроды России от 25.11.2019 N 35-р "Об утверждении Методических рекомендаций по структуре и содержанию программ сохранения биологического разнообразия коммерческих организаций"
-	
-	\weblink*{postman}{https://www.postman.com/}{Официальный сайт инструмента для тестирования API \en{Postman}}{25.05.2022}
+	\webbibitem{kommersant}{https://www.kommersant.ru/doc/2781947}{Ш. Мария Страна под властью борщевиков}{Коммерсантъ. 2015}{31.05.2022}
+	\webbibitem{er-initiative}{ https://er.ru/activity/news/zachem-neobhodima-federalnaya-programma-po-borbe-s-borshevikom-razyasnyaet-vladimir-burmatov}{В. Бурматов Зачем необходима федеральная программа по борьбе с борщевиком, разъясняет Владимир Бурматов}{Федеральный сайт партии Единая Россия. 13.08.2020}{31.05.2022}
+	\webbibitem{business-online}{https://www.business-gazeta.ru/article/412341}{Н. Голобурдова репортаж заседания Госсовета}{Газета Бизнес Online. 06.02.2019}{31.05.2022}
+	\webbibitem{mos-expenses}{ https://www.agroinvestor.ru/business-pages/34172-sovremennye-metodiki-sposobny-sokratit-raskhody-na-borbu-s-borshchevikom-v-neskolko-raz/}{Современные методики способны сократить расходы на борьбу с борщевиком в несколько раз}{Агроинвестор. 06.08.2020}{31.05.2022}
+	\webbibitem{len-expenses}{ https://www.lenoblzaks.ru/publics/single/115/63977}{Е. Скоропоспешная Борьба с борщевиком -- черная дыра бюджета}{Официальный сайт Законодательного собрания Ленинградской области}{31.05.2022}
+	\webbibitem{rural-measures}{ https://fsvps.gov.ru/ru/fsvps/news/36717.html}{Россельхознадзор подготовил рекомендации по борьбе с борщевиком Сосновского}{Федеральная служба по ветеринарному и фитосанитарному надзору (Россельхознадзор). 04.08.2020}{31.05.2022}
+	\bibitem{countryside-measures} \textquote{Земельный кодекс Российской Федерации} от 25.10.2001 N 136-ФЗ, статья 42 (ред. от 01.05.2022)
+	\bibitem{rural-fine} \textquote{Кодекс Российской Федерации об административных правонарушениях} от 30.12.2001 N 195-ФЗ (ред. от 16.04.2022) (с изм. и доп., вступ. в силу с 27.04.2022), статья 8.7
+	\bibitem{rural-law} Федеральный закон \textquote{Об обороте земель сельскохозяйственного назначения} от 24.07.2002 N 101-ФЗ
+	\bibitem{nature-law} Распоряжение Минприроды России от 25.11.2019 N 35-р \textquote{Об утверждении Методических рекомендаций по структуре и содержанию программ сохранения биологического разнообразия коммерческих организаций}
+
+
+
+	\webbibitem*{postman}{https://www.postman.com/}{Официальный сайт инструмента для тестирования API \en{Postman}}{25.05.2022}
 \end{thebibliography}
