--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -39,7 +39,5 @@
 \textbf{Практическая ценность данной работы} заключается в возможности контроля над распространением потенциально опасных видов растений (в частности, борщевика Сосновского).
 При необходимости с помощью описанного ПО можно проводить наблюдения за распространением любых видов растений.
 
-\tab Публикации по теме работы:
-\begin{itemize}
-	\item \weblink{https://etu.ru/assets/files/Faculty-FKTI/MO/sbornik-2022-moevm.pdf}{Сборник докладов студентов и аспирантов на научно-техническом семинаре кафедры МО ЭВМ, 2022 год, стр. 12}{23.05.2022}
-\end{itemize}
+\tab
+По теме работы существует публикация\cite{article}, описывающая разработку архитектуры системы.
