--- a/report/project.tex
+++ b/report/project.tex
@@ -324,7 +324,7 @@
 Так как для регистрации в системе пользователям необходимо указать и подтвердить их адрес электронной почты, а также в процессе работы с системой они могут загружать в неё фотоматериалы, администрации системы необходимо получить информированное согласие пользователей на обработку их конфиденциальных данных\cite{privacy-policy}.
 
 \tab
-Для проектируемой системы был составлен пример политики конфиденциальности (детали могут различаться в зависимости от целей и задач организации, использующей систему), её основные положения заключаются в следующем:
+Для проектируемой системы был составлен пример политики конфиденциальности (детали могут различаться в зависимости от целей и задач организации, использующей систему), её основные положения должны заключаться в следующем:
 \begin{itemize}
 	\item Система в обязательном порядке собирает и хранит личные данные пользователей, необходимые для связи с ними в экстренной ситуации (их адрес электронной почты).
 	\item Администрация системы имеет право использовать эти данные для связи с пользователями.
@@ -334,6 +334,9 @@
 	\item Такие данные могут обрабатываться автоматически или вручную неограниченным кругом лиц и будут распространяться открыто.
 	\item Такие данные не удаляются из системы при удалении аккаунта пользователя, так как могут представлять статистическую или исследовательскую ценность, но могут быть удалены по запросу пользователя или в связи с решением администрации системы.
 \end{itemize}
+
+\tab
+Пример политики конфиденциальности представлен в \additionref{privacy-policy}.
 
 \subsection{Модель данных}
 
@@ -415,50 +418,49 @@
 \subsection{Описание пользовательского интерфейса}
 
 \tab
-В соответствии со сценариями использования был разработан макет пользовательского интерфейса.
-\additionref{interface-plan}{Приложении А}.
+В соответствии со сценариями использования был разработан макет пользовательского интерфейса. Рисунки макета находятся в \additionref{interface-plan}.
 
 \subsubsection{Пользовательский интерфейс клиентского приложения}
 
 \tab
-При запуске клиентского приложения открывается его главный экран (приложение А.1).
+При запуске клиентского приложения открывается его главный экран (\subadditionref{main-screen-plan}).
 На нём изображена карта с центром в Санкт-Петербурге.
 На карте иконками растений отмечены места, в которых пользователи системы отметили нахождение отслеживаемых растений.
 Цвет иконок на карте различается в зависимости от статуса отчёта (\textquote{необработано} - зелёный, \textquote{актуально} - оранжевый и \textquote{неактуально} - серый).
 Если пользователь дал приложению доступ к определению своего местоположения, на карте также будет отмечена его позиция иконкой в виде человека, а сама карта изначально будет центрирована по его местоположению.
 \begin{enumerate}
-	\item При нажатии на кнопку навигации в правом верхнем углу экрана открывается панель навигации (приложение А.1).
+	\item При нажатии на кнопку навигации в правом верхнем углу экрана открывается панель навигации (\subadditionref{main-screen-plan}).
 	Вверху панели отображается фото профиля пользователя и его имя в случае, если он установил себе имя, или же адрес электронной почты.
 	\begin{enumerate}
-		\item При нажатии на кнопку \textquote{Account} открывается экран аккаунта пользователя (приложение А.2).
+		\item При нажатии на кнопку \textquote{Account} открывается экран аккаунта пользователя (\subadditionref{account-screen-plan}).
 		Вверху экрана отображается фото профиля пользователя, которое можно заменить при нажатии на него.
 		Также пользователю предлагается изменить его имя, адрес электронной почты, пароль, а также выйти из системы и удалить аккаунт.
 		\begin{enumerate}
-			\item При изменении электронной почты после ввода нового адреса открывается диалоговое окно, в которое для подтверждения изменения пользователь должен ввести код из полученного им письма (приложение А.3).
-			\item При изменении пароля открывается диалоговое окно, в которое для подтверждения изменения пользователь должен ввести новый пароль дважды (приложение А.4).
+			\item При изменении электронной почты после ввода нового адреса открывается диалоговое окно, в которое для подтверждения изменения пользователь должен ввести код из полученного им письма (\subadditionref{code-dialog-plan}).
+			\item При изменении пароля открывается диалоговое окно, в которое для подтверждения изменения пользователь должен ввести новый пароль дважды (\subadditionref{password-dialog-plan}).
 		\end{enumerate}
-		В случае, если пользователь ещё не произвёл авторизацию в системе, открывается экран авторизации (приложение А.5).
+		В случае, если пользователь ещё не произвёл авторизацию в системе, открывается экран авторизации (\subadditionref{auth-screen-plan}).
 		На этом экране пользователю предлагается ввести адрес электронной почты создаваемого аккаунта и дважды повторить его пароль.
 		Также для создания профиля пользователю необходимо поставить флажок о том, что он согласен с политикой конфиденциальности данных.
 		\begin{enumerate}
-			\item При нажатии на кнопку \textquote{\en{Already have account?}} открывается экран входа в систему (приложение А.6).
+			\item При нажатии на кнопку \textquote{\en{Already have account?}} открывается экран входа в систему (\subadditionref{login-screen-plan}).
 			От экрана авторизации он отличается тем, что для входа систему нет необходимости повторно подтверждать пароль, электронную почту и соглашаться с политикой конфиденциальности данных.
 			Обратно на экран авторизации с него можно попасть, нажав на кнопку \textquote{\en{New to HogWeedGo?}}.
-			\item При нажатии на кнопку \textquote{\en{Already have account?}} открывается диалоговое окно, в которое для подтверждения адреса электронной почты пользователь должен ввести код из полученного им письма (приложение А.3).
+			\item При нажатии на кнопку \textquote{\en{Already have account?}} открывается диалоговое окно, в которое для подтверждения адреса электронной почты пользователь должен ввести код из полученного им письма (\subadditionref{code-dialog-plan}).
 			\item При нажатии на слова \textquote{\en{Terms and conditions}}, помеченные голубым в описании флажка согласия с политикой конфиденциальности, пользователь перенаправляется на страницу с опубликованной политикой конфиденциальности системы и управляющей ей системы.
 		\end{enumerate}
 		\item При нажатии на кнопку \textquote{\en{Map}} открывается главный экран приложения с картой.
 		\item При нажатии на кнопку \textquote{\en{About}} открывается экран с информацией о системе и об организации, которая ей управляет.
 		\item При нажатии на кнопку \textquote{\en{Feedback}} пользователь перенаправляется на страницу ссвязи с организацией, управляющей системой.
 	\end{enumerate}
-	\item При нажатии на отметку на карте открывается панель демонстрации отчёта (приложение А.7).
+	\item При нажатии на отметку на карте открывается панель демонстрации отчёта (\subadditionref{view-screen-plan}).
 	На этой панели пользователю демонстрируется информация данного отчёта, фотографии, приложенные к нему, а также комментарии, дополняющие отчёт.
 	Пользователю предлагается также оставить комментарий к отчёту.
 	\begin{enumerate}
-		\item При нажатии на приложенную к отчёту фотографию, она открывается в полноэкранном режиме (приложение А.8).
+		\item При нажатии на приложенную к отчёту фотографию, она открывается в полноэкранном режиме (\subadditionref{full-screen-plan}).
 		При нажатии на кнопку с символом дискеты в левом нижнем углу экрана пользователю предлагается скачать эту фотографию.
 	\end{enumerate}
-	\item При нажатии на кнопку \textquote{+} в левом нижнем углу экрана открывается экран отправки отчёта(приложение А.9).
+	\item При нажатии на кнопку \textquote{+} в левом нижнем углу экрана открывается экран отправки отчёта(\subadditionref{report-screen-plan}).
 	На этом экране пользователю предлагается ввести данные, необходимые для отправки отчёта (краткое описание найденного растения, его адрес, место находки на карте, а также дату и время находки).
 	По нажатию на кнопку \textquote{\en{Send}} отчёт отправляется в систему.
 \end{enumerate}
@@ -466,25 +468,25 @@
 \subsubsection{Пользовательский интерфейс сервисного сайта}
 
 Макетом для сервисного сайта системы послужил автоматически сгенерированный фреймворком \en{Django} сайт.
-При запуске сервисного сайта открывается страница входа (приложение А.10).
-После авторизации пользователя в системе открывается главная страница сайта (приложение А.11).
+При запуске сервисного сайта открывается страница входа (\subadditionref{login-page-plan}).
+После авторизации пользователя в системе открывается главная страница сайта (\subadditionref{main-page-plan}).
 На ней справа отображаются последние действия, совершенные в системе, снизу на карте отмечены места, в которых пользователи системы отметили нахождение отслеживаемых растений.
-При нажатии на такую отметку открывается страница редактирования соответствующего отчёта (приложение А.12).
+При нажатии на такую отметку открывается страница редактирования соответствующего отчёта (\subadditionref{report-page-plan}).
 \begin{enumerate}
-	\item При нажатии на кнопку \textquote{\en{Users}} открывается страница отображения пользователей системы (приложение А.13).
+	\item При нажатии на кнопку \textquote{\en{Users}} открывается страница отображения пользователей системы (\subadditionref{users-page-plan}).
 	На этой странице с профилями пользователей можно проводить массовые действия (см п. \ref{subsec:serverside-app}), искать их, сортировать и фильтровать.
 	\begin{enumerate}
-		\item При нажатии на адрес электронной почты пользователя открывается страница редактирования соответствующего профиля пользователя (приложение А.14).
+		\item При нажатии на адрес электронной почты пользователя открывается страница редактирования соответствующего профиля пользователя (\subadditionref{user-page-plan}).
 		На этой странице профиль можно редактировать, блокировать, удалять, а также написать пользователю электронное письмо, перейдя по ссылке в соответствующем поле.
 	\end{enumerate}
-	\item При нажатии на кнопку \textquote{\en{Reports}} открывается страница отображения отчётов (приложение А.15).
+	\item При нажатии на кнопку \textquote{\en{Reports}} открывается страница отображения отчётов (\subadditionref{reports-page-plan}).
 	На этой странице с отчётами можно проводить массовые действия (см п. \ref{subsec:serverside-app}), искать их, сортировать и фильтровать.
 	\begin{enumerate}
-		\item При нажатии на дату отправки открывается страница редактирования соответствующего отчёта (приложение А.12).
+		\item При нажатии на дату отправки открывается страница редактирования соответствующего отчёта (\subadditionref{report-page-plan}).
 		На этой странице отчёт можно редактировать, удалять, а также редактировать и удалять приложенные к нему комментарии и фотографии.
 		При нажатии на ссылку в соответствующем поле открывается редактирования профиля пользователя, отправившего отчёт.
 	\end{enumerate}
 \end{enumerate}
 
 \tab
-Рисунки экрана приложений, разработанных по макету, находятся в \additionref{interface-real}{Приложении Б} и имеют соответствующую нумерацию.
+Рисунки экрана приложений, разработанных по макету, находятся в \additionref{interface-real} и имеют соответствующую нумерацию.
