--- a/report/report.tex
+++ b/report/report.tex
@@ -29,9 +29,10 @@
 \usepackage{caption}
 \usepackage{tikz}
 \usetikzlibrary{positioning, fit, backgrounds, calc}
-\graphicspath{ {./images/} }
+\graphicspath{{./images/}}
 
 % \usepackage{showkeys}
+\usepackage[hyphens]{url}
 \usepackage[unicode, colorlinks=true, linkcolor=, urlcolor=blue, citecolor=]{hyperref}
 \hypersetup {
 	pdfauthor={Сергеев А. Д.},
