--- a/report/additions.tex
+++ b/report/additions.tex
@@ -2,189 +2,49 @@
 
 \addition{interface-plan}{Макет пользовательского интерфейса}
 
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{main_screen_plan}
-	\centering
-	\caption*{Приложение А.1. Главный экран клиентского приложения}
-\end{figure}
+\subaddition{main-screen-plan}{Главный экран клиентского приложения}
+\subaddition{account-screen-plan}{Экран аккаунта пользователя}
+\subaddition[8]{code-dialog-plan}{Диалоговое окно ввода кода}
+\subaddition[8]{password-dialog-plan}{Диалоговое окно изменения пароля}
+\subaddition{auth-screen-plan}{Экран авторизации}
+\subaddition{login-screen-plan}{Экран входа в систему}
+\subaddition{view-screen-plan}{Экран демонстрации отчёта}
+\subaddition{full-screen-plan}{Экран отображения фотографии}
+\subaddition{report-screen-plan}{Экран отправки отчёта}
 
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{account_screen_plan}
-	\centering
-	\caption*{Приложение А.2. Экран аккаунта пользователя}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=8cm]{code_dialog_plan}
-	\centering
-	\caption*{Приложение А.3. Диалоговое окно ввода кода}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=8cm]{password_dialog_plan}
-	\centering
-	\caption*{Приложение А.4. Диалоговое окно изменения пароля}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{auth_screen_plan}
-	\centering
-	\caption*{Приложение А.5. Экран авторизации}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{login_screen_plan}
-	\centering
-	\caption*{Приложение А.6. Экран входа в систему}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{view_screen_plan}
-	\centering
-	\caption*{Приложение А.7. Экран демонстрации отчёта}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{full_screen_plan}
-	\centering
-	\caption*{Приложение А.8. Экран отображения фотографии}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{report_screen_plan}
-	\centering
-	\caption*{Приложение А.9. Экран отправки отчёта}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{login_page_plan}
-	\centering
-	\caption*{Приложение А.10. Страница входа в систему}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{login_page_plan}
-	\centering
-	\caption*{Приложение А.11. Главная страница сервисного сайта}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{report_page_plan}
-	\centering
-	\caption*{Приложение А.12. Страница редактирования отчёта}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{users_page_plan}
-	\centering
-	\caption*{Приложение А.13. Страница отображения пользователей системы}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{user_page_plan}
-	\centering
-	\caption*{Приложение А.14. Страница редактирования профиля пользователя}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=15cm]{reports_page_plan}
-	\centering
-	\caption*{Приложение А.15. Страница отображения отчётов}
-\end{figure}
+\subaddition{login-page-plan}{Страница входа в систему}
+\subaddition{main-page-plan}{Главная страница сервисного сайта}
+\subaddition{report-page-plan}{Страница редактирования отчёта}
+\subaddition{users-page-plan}{Страница отображения пользователей системы}
+\subaddition{user-page-plan}{Страница редактирования профиля пользователя}
+\subaddition{reports-page-plan}{Страница отображения отчётов}
 
 \cleardoublepage
 
 \addition{interface-real}{Пользовательский интерфейс}
 
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{main_screen_real}
-	\centering
-	\caption*{Приложение А.1. Главный экран клиентского приложения}
-\end{figure}
+\subaddition{main-screen-real}{Главный экран клиентского приложения}
+\subaddition{account-screen-real}{Экран аккаунта пользователя}
+\subaddition[8]{code-dialog-real}{Диалоговое окно ввода кода}
+\subaddition[8]{password-dialog-real}{Диалоговое окно изменения пароля}
+\subaddition{auth-screen-real}{Экран авторизации}
+\subaddition{login-screen-real}{Экран входа в систему}
+\subaddition{view-screen-real}{Экран демонстрации отчёта}
+\subaddition{full-screen-real}{Экран отображения фотографии}
+\subaddition{report-screen-real}{Экран отправки отчёта}
 
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{account_screen_real}
-	\centering
-	\caption*{Приложение А.2. Экран аккаунта пользователя}
-\end{figure}
+\subaddition{login-page-real}{Страница входа в систему}
+\subaddition{main-page-real}{Главная страница сервисного сайта}
+\subaddition{report-page-real}{Страница редактирования отчёта}
+\subaddition{users-page-real}{Страница отображения пользователей системы}
+\subaddition{user-page-real}{Страница редактирования профиля пользователя}
+\subaddition{reports-page-real}{Страница отображения отчётов}
 
-\begin{figure}[!htbp]
-	\includegraphics[width=8cm]{code_dialog_real}
-	\centering
-	\caption*{Приложение А.3. Диалоговое окно ввода кода}
-\end{figure}
+\cleardoublepage
 
-\begin{figure}[!htbp]
-	\includegraphics[width=8cm]{password_dialog_real}
-	\centering
-	\caption*{Приложение А.4. Диалоговое окно изменения пароля}
-\end{figure}
+\addition{privacy-policy}{Пример политики конфиденциальности системы}
 
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{auth_screen_real}
-	\centering
-	\caption*{Приложение А.5. Экран авторизации}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{login_screen_real}
-	\centering
-	\caption*{Приложение А.6. Экран входа в систему}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{view_screen_real}
-	\centering
-	\caption*{Приложение А.7. Экран демонстрации отчёта}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{full_screen_real}
-	\centering
-	\caption*{Приложение А.8. Экран отображения фотографии}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{report_screen_real}
-	\centering
-	\caption*{Приложение А.9. Экран отправки отчёта}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{login_page_real}
-	\centering
-	\caption*{Приложение А.10. Страница входа в систему}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{login_page_real}
-	\centering
-	\caption*{Приложение А.11. Главная страница сервисного сайта}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{report_page_real}
-	\centering
-	\caption*{Приложение А.12. Страница редактирования отчёта}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{users_page_real}
-	\centering
-	\caption*{Приложение А.13. Страница отображения пользователей системы}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=12cm]{user_page_real}
-	\centering
-	\caption*{Приложение А.14. Страница редактирования профиля пользователя}
-\end{figure}
-
-\begin{figure}[!htbp]
-	\includegraphics[width=15cm]{reports_page_real}
-	\centering
-	\caption*{Приложение А.15. Страница отображения отчётов}
-\end{figure}
+\lstinputlisting[breaklines=true, basicstyle=\small]{../server/assets/privacy-policy.html}
 
 \cleardoublepage
 
