--- a/report/images.tex
+++ b/report/images.tex
@@ -243,7 +243,7 @@
 
 \newcommand{\picturesix}{
 	\begin{figure}[!htbp]
-		\includegraphics[width=18cm]{head_training}
+		\includegraphics[width=18cm]{head-training}
 		\centering
 		\caption{График обучения верхних слоёв модели}
 	\end{figure}
@@ -251,7 +251,7 @@
 
 \newcommand{\pictureseven}{
 	\begin{figure}[!htbp]
-		\includegraphics[width=18cm]{full_training}
+		\includegraphics[width=18cm]{full-training}
 		\centering
 		\caption{График дообучения модели}
 	\end{figure}
