report fixed 1ce again

--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -12,7 +12,7 @@
 Объект исследования: автоматизированный учёт и хранение данных о распространение вредоносных растений.
 
 \tab
-Цель работы: Разработка системы, позволяющей решить проблему распространения потенциально опасных для человека видов растений и контроля их популяции, позволив широким массам добровольцев осуществлять наблюдение за потенциально опасными видами растений и дав группе экологов возможность осуществлять модерацию и анализ собранных данных.
+Цель работы: Разработка системы, позволяющей решить проблему распространения потенциально опасных для человека видов растений и контроля их популяции, позволив широким массам добровольцев осуществлять наблюдение за такими растениями и дав группе экологов возможность осуществлять модерацию и анализ собранных данных.
 
 \tab
 В ходе выполнения данной выпускной квалификационной работы была создана система для наблюдения и учёта распространения потенциально опасных для человека видов растений.
