--- a/report/description.tex
+++ b/report/description.tex
@@ -73,7 +73,7 @@
 Таким образом обеспечивается как проверка адреса электронной почты, так и ограничение на действие кода в 10 минут.
 
 \tab
-Для предотвращения DDoS атак на систему было предусмотрено ограничение на отправку пользователем требующих авторизации запросов в 4 запроса в минуту.
+Для предотвращения HTTP flood атак на систему было предусмотрено ограничение на отправку пользователем требующих авторизации запросов в 4 запроса в минуту.
 
 \tab
 HTTP запросы пользователей обрабатываются при помощи объекта класса \code{Simple\-Router}, входящего в состав фреймворка \en{DRF}. \en{OpenAPI} спецификация API системы представлена в \additionref{openapi}.
