--- a/report/notes.tex
+++ b/report/notes.tex
@@ -10,10 +10,27 @@
 	\item Django Rest Framework (DRF) -- дополнительный набор инструментов для фреймворка \en{Django} для создания web API.
 	\item Docker -- платформа для запуска приложений в изолированных виртуальных на уровне операционной среды средах, называемых контейнерами.
 	\item docker-compose -- программа для настройки и запуска систем, состоящих из большого количества \en{Docker} контейнеров.
+	\item Entity-Relationship (ER) модель -- модель данных, позволяющая описать предметную область при помощи выделения сущностей и обозначения связей. Используется при проектировании баз данных.
 	\item Flutter -- фреймворк для языка программирования \en{Dart}, позволяющий разрабатывать с его помощью кросс-платформенные приложения.
+	\item GitHub -- крупнейший сервис для хостинга и совместной разработки IT проектов, основанный на системе контроля версий Git.
+	\item Hypertext Transfer Protocol (Secure) (HTTP(S)) -- протокол прикладного уровня для передачи данных. Предполагает наличие клиента и сервера и использование установленного набора запросов. Его Secured расширение поддерживает TLS шифрование данных.
+	\item HTTP flood атака -- хакерская атака на систему, целью которой является переполнение системы HTTP запросами.
+	\item MobileNetV2 -- архитектура свёрточной нейронной сети, основной особенностью которой является большая скорость работы и небольшой размер модели.
+	\item Nominatim -- инструмент для поиска данных OpenStreetMaps по имени и адресу, а также создания полных адресов мест по их координатам.
 	\item PostgreSQL -- объектно-реляционная система управления базами данных.
 	\item PostGIS -- программа, добавляющая поддержку географических объектов в реляционную базу данных PostgreSQL.
 	\item Python -- высокоуровневый интерпретируемый язык программирования общего назначения.
+	\item Representational State Transfer (REST) -- архитектурный стиль взаимодействия частей приложения в сети.
 	\item TensorFlow -- программная библиотека для машинного обучения, построения и тренировки нейронных сетей.
+	\item Unix Timestamp -- система описания времени, использующаяся в POSIX-совместимых системах. Время в ней определяется как количество секунд, прошедших с полуночи 1 января 1970 года.
+	\item WEB интерфейс -- одна или несколько web страниц, представляющая из себя пользовательский интерфейс.
+	\item База Данных (БД) -- совокупность данных, хранимая в соответствии с моделью данных.
+	\item Виджет -- элемент графического пользовательского интерфейса, имеющий стандартный вид и выполняющий стандартные действия.
+	\item Конкатенация -- операция соединения, склеивания, линейных объектов, обычно строк.
+	\item Пагинация -- постраничный вывод данных, разделение данных на страницы фиксированного размера и демонстрация их по порядку.
+	\item Сериализация -- процесс перевода структуры данных в последовательность данных (в данной работе для передачи при помощи HTTP запросов используется сериализация в строку). Обратный процесс называется десериализацией.
+	\item Система Управления Базами Данных (СУБД) -- совокупность программ, обеспечивающих управление созданием, использованием и удалением баз данных.
+	\item Токен -- строка, выдающаяся пользователю после успешной авторизации и использующаяся для доступа к системе.
 	\item Фреймворк -- программное обеспечение, облегчающее разработку и объединение разных компонентов большого программного проекта.
+	\item Хэш -- результат работы хэш-функции, строка определённой длины, полученная при помощи преобразования входных данных определённым алгоритмом.
 \end{itemize}
