--- a/report/project.tex
+++ b/report/project.tex
@@ -11,8 +11,8 @@
 Она же обеспечивает функционирование API системы, часть методов которого не требуют аутентификации и позволяют получать обработанные, отсортированные и отфильтрованные данные, а часть - требует и позволяет отправлять новые данные в систему.
 
 \tab
-Получить доступ к этим данным можно при помощи приложения-клиента или любого сайта, который сделает запрос к API системы.
-Приложение клиент также позволяет пользователям управлять своим аккаунтом, собирать данные в отчёт и отправлять его в систему.
+Получить доступ к этим данным можно при помощи клиентского приложения или любого сайта, который сделает запрос к API системы.
+Клиентское приложение также позволяет пользователям управлять своим аккаунтом, собирать данные в отчёт и отправлять его в систему.
 
 \tab
 Схема архитектуры представлена на рисунке 1.
