--- a/report/tests.tex
+++ b/report/tests.tex
@@ -5,7 +5,7 @@
 \subsection{Исследование быстродействия системы}
 
 \tab
-Исследование быстродействия системы было проведено при помощи инструмента \en{Google Chrom Developer Tools} в веб браузере \en{Google Chrome}. В ходе тестирование было исследовано быстродействие системы как без загруженных данных так и с загруженными данными.
+Исследование быстродействия системы было проведено при помощи инструмента \en{Google Chrome Developer Tools} в веб браузере \en{Google Chrome}. В ходе тестирование было исследовано быстродействие системы как без загруженных данных так и с загруженными данными.
 
 \tab
 Для системы без данных каждый запрос к API системы был произведён 15 раз, после чего было получено среднее арифметическое значение времени ответа системы.
