--- a/report/report.tex
+++ b/report/report.tex
@@ -27,6 +27,8 @@
 \usepackage{xinttools}
 
 \usepackage{caption}
+\captionsetup{labelsep=endash}
+
 \usepackage{tikz}
 \usetikzlibrary{positioning, fit, backgrounds, calc}
 \graphicspath{{./images/}}
