--- a/report/support.tex
+++ b/report/support.tex
@@ -110,11 +110,11 @@
 \newcolumntype{Y}{>{\centering\arraybackslash}X}
 
 \newcommand{\longcaption}[1]{
-	\caption{\centering#1}
+	\caption{\raggedright #1}
 	\addtocounter{table}{-1}
 	\\\hline
 	\endfirsthead
-	\caption*{\centeringПродолжение таблицы \arabic{table}}
+	\caption*{\raggedright Продолжение таблицы \arabic{table}}
 	\\\hline
 	\endhead
 	\hline
